# 25

./: README.md  catalog.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: delete_all.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  home.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
wagnit_blog/: admin.py  apps.py  models.py  urls.py  views.py
wagnit_blog/migrations/: 0001_initial.py
wagnit_blog/templates/wagnit_blog/: base_wagnit.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
wagnit_blog/templates/wagnit_blog/includes/: inc_menu.html
wagnit_blog/templatetags/: wagnit_tags.py
