[tool.poetry]
name = "python22"
version = "0.1.0"
description = ""
authors = ["butylkapiligrim < butylkapiligrim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
views = "^0.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
